--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -293,8 +293,8 @@
                 <a href="/member/{{user.username}}">
                   <span class="">{{user.username}}</span><br>
                 </a>
-                <span class="">{{user.title}}</span><br><!--too much-->
-                <span class="">{{user.state}}</span><br>
+                <span class="">{{user.title}}</span><!--too much-->
+                <span class="">{{user.state}}</span>
               </md-card-title-text>
             </md-card-title>
           </md-card>
