--- a/assets/src/app/committee/bills.tpl.html
+++ b/assets/src/app/committee/bills.tpl.html
@@ -27,11 +27,11 @@
           {{bill.voteCount}}
           <button class="btn btn-default" ng-click="createVote(1, bill)"><i class="fa fa-caret-up"></i></button>
           <button class="btn btn-default" ng-click="createVote(-1, bill)"><i class="fa fa-caret-down"></i></button>
-          <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
+          <a href="/bill/{{bill._id}}/{{bill.title}}">{{bill.title}}</a>
         </h4>
       </div>
       <div>
-        <a href="/bill/{{bill.id}}/{{bill.title}}">comment</a>
+        <a href="/bill/{{bill._id}}/{{bill.title}}">comment</a>
       </div>
       <br>
     </div>
