--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -175,7 +175,8 @@
         <h4>be part of the movement</h4>
         <h4>direct your impact though input on policy</h4>
         <p>directly impact the creation of policy</p>
-        <p>contact your reps and tell them your opinion about legislation</p>
+        <!--<p>contact your reps and tell them your opinion about legislation</p>-->
+        <p>creating a coalition of representation</p>
 
         <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
         <!--<p>with direct input on policy your voice matters</p>-->
