--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -563,7 +563,8 @@ hr {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 100vh;
+  //height: 100vh;
+  padding:5%;
   width: 100%;
   position: relative;
 }
@@ -582,7 +583,7 @@ hr {
   min-width: 320px;
   max-width: 475px;
   background: #fff;
-  top: 20%;
+  //top: 20%;
   position: relative;
   margin: auto;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.25);
