--- a/assets/styles/css/theme.css
+++ b/assets/styles/css/theme.css
@@ -24,6 +24,21 @@ body {
     min-height: 100%
 }
 
+*::-webkit-media-controls-panel {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
+*::--webkit-media-controls-play-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
+*::-webkit-media-controls-start-playback-button {
+  display: none!important;
+  -webkit-appearance: none;
+}
+
 md-card{
   overflow:hidden;
 }
