--- a/assets/src/app/committee/committees.tpl.html
+++ b/assets/src/app/committee/committees.tpl.html
@@ -7,12 +7,12 @@
     <li style="color: #fff;background: #4b5359"><a style="color: #2AB996" href="committee/{{committee.urlTitle}}/committees">committees</a></li>
     <li><a href="committee/{{committee.urlTitle}}/bills">bills</a></li>
     <li><a href="committee/{{committee.urlTitle}}">discussion</a></li>
-    <li><a href="committee/{{committee.urlTitle}}">polls</a></li>
     <li><a href="committee/{{committee.urlTitle}}/members">members</a></li>
   </ul>
 </div>
 <div id="main-container">
   <div class="committee-title">
+    <a href="committee/{{committee.parent.urlTitle}}">{{committee.parent.title}}</a>
     <h1>{{committee.title}}</h1>
   </div>
   <h1>committees</h1>
