--- a/assets/src/app/committee/members.tpl.html
+++ b/assets/src/app/committee/members.tpl.html
@@ -3,38 +3,44 @@
     <br>
     <li><a style="font-weight:bold" href="committee/{{committee.urlTitle}}">{{committee.title}}</a></li>
     <hr>
-    <!--<li><a href="committee/{{committee.urlTitle}}">bylaws</a></li>-->
-    <!--<li><a href="committee/{{committee.urlTitle}}/committees">committees</a></li>-->
+    <li><a href="committee/{{committee.urlTitle}}">bylaws</a></li>
     <li><a href="committee/{{committee.urlTitle}}/bills">bills</a></li>
+    <li><a href="committee/{{committee.urlTitle}}/committees">committees</a></li>
     <li><a href="committee/{{committee.urlTitle}}">discussion</a></li>
-    <!--<li><a href="committee/{{committee.urlTitle}}">polls</a></li>-->
+    <li><a href="committee/{{committee.urlTitle}}">elections</a></li>
     <li style="color: #fff;background: #4b5359"><a style="color: #2AB996" href="committee/{{committee.urlTitle}}/members">members</a></li>
     <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
   </ul>
 </div>
+
 <div id="main-container">
   <div class="committee-title">
     <h1>{{committee.title}}</h1>
   </div>
   <md-divider ></md-divider>
-  <h2>members</h2>
+  <h2>{{members.length}} members</h2>
   <md-divider ></md-divider>
-  <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-    <md-card flex="20" ng-repeat="member in members">
-      <a href="/member/{{member.user.username}}">
-        <img src="{{member.user.avatarUrl}}" err-src="/images/avatar.png" class="md-card-image" alt="{{member.user.username}}">
-      </a>
-      <md-card-title-text>
-        <a href="/member/{{member.user.username}}">
-          <h3>{{member.user.username}}</h3>
-        </a>
-        <h4>{{member.title}}</h4>
-        <button class="btn btn-primary">follow</button>
-        <button class="btn btn-primary">select as representative</button>
-        <!--number of reps?-->
-      </md-card-title-text>
-    </md-card>
-  </div>
+  <div class="container">
+    <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
+      <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+        <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
+          <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" class="avatar" src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
+        </div>
+        <div class="info">
+          <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
+          <h3 class="position"><a href="member/{{member.user.username}}">{{member.user.title}}</a></h3>
+          <h4>{{member.title}}</h4>
+          <p>Large bet on myself in round one pansy i more, but you go</p>
+        </div>
+        <div class="social">
+          <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+          <a ng-show="member.user.socialAccounts.twitter.profileUrl" href="{{member.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+          <a ng-show="member.user.socialAccounts.google.profileUrl" href="{{member.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>  
+
 </div>
 <div ng-include="'footer/index.tpl.html'"></div>
 
