--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -87,9 +87,9 @@
         <md-card ng-repeat="vote in userVotes">
           <md-card-title>
             <md-card-title-text>
-              {{vote.voteString}}<br><br>
-              <a href="/vote/{{vote.vote.id}}">{{vote.vote.title}}</a><br>
-              <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a><br>
+              {{voteString}}<br><br>
+              <a href="/vote/{{id}}">{{title}}</a><br>
+              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a><br>
             </md-card-title-text>
           </md-card-title>
         </md-card>
@@ -126,21 +126,21 @@
         <md-card ng-repeat="vote in votes">
           <md-card-title>
             <md-card-title-text>
-              <h4><a href="/vote/{{vote.id}}">{{vote.title}}</a></h4>
+              <h4><a href="/vote/{{id}}">{{title}}</a></h4>
               <div class="margin-5"></div>
               <h4>
-                <b>+ {{vote.plusCount-vote.minusCount}}</b>
-                <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)">
-                  <i class="fa fa-caret-up vBlue"></i> <b>{{vote.plusCount}}</b>
+                <b>+ {{plusCount-minusCount}}</b>
+                <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)">
+                  <i class="fa fa-caret-up vBlue"></i> <b>{{plusCount}}</b>
                 </button>
-                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)">
-                  <i class="fa fa-caret-down red-color"></i>  <b>{{vote.minusCount}}</b>
+                <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)">
+                  <i class="fa fa-caret-down red-color"></i>  <b>{{minusCount}}</b>
                 </button>
                 <br><br>
-                <span class="subtitle">({{vote.voteCount}} total votes)</span>
+                <span class="subtitle">({{voteCount}} total votes)</span>
               </h4>
               <div class="margin-10"></div>
-              <a href="/bill/{{vote.bill.id}}/{{vote.bill.title}}">{{vote.bill.title}}</a>
+              <a href="/bill/{{bill.id}}/{{bill.title}}">{{bill.title}}</a>
               <br><br>
             </md-card-title-text>
           </md-card-title>
@@ -183,7 +183,6 @@
         <!--generate a network of reprensentatives for the people-->
         <!--rep others to their reps-->
         <!--<p>with continual open ballot elections - represent others at anytime</p>-->
-
         <!--organizing a coalition of reps for reps-->
 
         <md-divider></md-divider>
@@ -212,8 +211,8 @@
                     <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
                   </h4>
                 </md-card-title-text>
-                 <button ng-class="{'upVoted': vote.class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{vote.plusCount}}</button>
-                <button ng-class="{'downVoted': vote.class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{vote.minusCount}}</button>
+                 <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{plusCount}}</button>
+                <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{minusCount}}</button>
               </md-card-title>
             </md-card>
           </div>
@@ -285,7 +284,7 @@
 
         <!--member card css?-->
         <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-          <md-card flex="20" ng-repeat="user in users">
+          <md-card class="col-lg-3 col-sm-6" ng-repeat="user in users">
             <a href="/member/{{user.username}}">
               <img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png" class="md-card-image" alt="{{user.username}}">
             </a>
@@ -299,6 +298,25 @@
               </md-card-title-text>
             </md-card-title>
           </md-card>
+        </div>
+
+        <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
+          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+            <div class="image" style="background-image: url('{{user.coverUrl}}')">
+              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+            </div>
+            <div class="info">
+              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
+              <p>{{user.state}}</p>
+              <p>Large bet on myself in round one pansy i more, but you go</p>
+            </div>
+            <div class="social">
+              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+            </div>
+          </div>
         </div>
 
         <div ng-click="loadMoreMembers()" style="text-align:center">
