--- a/assets/src/app/vote/index.tpl.html
+++ b/assets/src/app/vote/index.tpl.html
@@ -25,8 +25,7 @@
 			        <div class="info">
 			          <h2 class="name"><a href="member/{{vote.user.username}}">{{vote.user.username}}</a></h2>
 			          <h3 class="position"><a href="member/{{vote.user.username}}">{{vote.user.title}}</a></h3>
-			          <p>YES</p>
-			          <p>Large bet on myself in round one pansy i more, but you go</p>
+			          <p>Yes</p>
 			        </div>
 			        <div class="social">
 			          <a ng-show="vote.user.socialAccounts.facebook.profileUrl" href="{{vote.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
@@ -45,8 +44,7 @@
 			        <div class="info">
 			          <h2 class="name"><a href="member/{{vote.user.username}}">{{vote.user.username}}</a></h2>
 			          <h3 class="position"><a href="member/{{vote.user.username}}">{{vote.user.title}}</a></h3>
-						<p>NO</p>
-			          <p>Large bet on myself in round one pansy i more, but you go</p>
+					  <p>No</p>
 			        </div>
 			        <div class="social">
 			          <a ng-show="vote.user.socialAccounts.facebook.profileUrl" href="{{vote.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
