--- a/assets/src/app/committee/discussion.tpl.html
+++ b/assets/src/app/committee/discussion.tpl.html
@@ -4,6 +4,7 @@
     <li><a style="font-weight:bold" href="committee/{{committee.urlTitle}}">{{committee.title}}</a></li>
     <hr>
     <li><a href="committee/{{committee.urlTitle}}/bills">bills<i class="fa fa-pencil"></i></a></li>
+    <li><a href="committee/{{committee.urlTitle}}/committees">committees<i class="fa fa-pencil"></i></a></li>
     <li style="color: #fff;background: #4b5359"><a style="color: #2AB996" href="committee/{{committee.urlTitle}}/discussion">discussion</a></li>
     <li><a href="committee/{{committee.urlTitle}}/members">members</a></li>
     <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
