--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -5,6 +5,7 @@
         <base href="/">
         <!-- Viewport mobile tag for sensible mobile support -->
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="fragment" content="!">
 
         <!--STYLES-->
         <link rel="stylesheet" href="/styles/css/about.css">
