--- a/assets/src/app/bills/index.tpl.html
+++ b/assets/src/app/bills/index.tpl.html
@@ -32,7 +32,7 @@
 	<md-divider ></md-divider>
 	<br><br>
 	<div ng-click="loadMore()" style="text-align:center">
-	  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+	  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 	</div>
 </md-content>
 
