--- a/assets/src/app/member/index.tpl.html
+++ b/assets/src/app/member/index.tpl.html
@@ -178,7 +178,7 @@
 			</md-card>
 			<br><br>	
 			<div ng-show="votes.legnth > 0 && votes.legnth != voteCount" ng-click="loadMore()" style="text-align:center">
-			  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE</button>
+			  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
 			</div>
 		</uib-tab>
 		<!--<uib-tab heading="Follow">
