--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -140,7 +140,7 @@
                 <span class="subtitle">({{vote.voteCount}} total votes)</span>
               </h4>
               <div class="margin-10"></div>
-              <a href="/bill/{{bill.id}}/{{bill.title}}">{{vote.bill.title}}</a>
+              <a href="/bill/{{bill._id}}/{{bill.title}}">{{vote.bill.title}}</a>
               <br><br>
             </md-card-title-text>
           </md-card-title>
