--- a/assets/src/app/bill/index.tpl.html
+++ b/assets/src/app/bill/index.tpl.html
@@ -12,27 +12,32 @@
     	</div>
 		<uib-tabset>
 			<uib-tab heading="Info" active="active">
-				<br><br>
-				<a href="member/{{bill.user.username}}">
-					<img src="{{bill.user.avatarUrl}}" style="height:100px;">
-					{{bill.user.username}}
-				</a>
-				<br><br>
-				<div class="billContent">
-					<br>
-					<p>{{bill.billContent.current_status_description}}</p>
-					<p>{{bill.billContent.current_status_label}}</p>
-					<p>{{bill.summary}}</p>
-					
-					<!--<p>{{bill.summaryShort}}</p>-->
-					<!--<p class="lead">{{bill.billContent.display_number}}</p>-->
-					<!--<p class="lead">{{bill.billContent.introduced_date}}</p>-->
-					<!--<p class="lead">{{bill.billContent.is_alive}}</p>-->
-					<!--<p class="lead"><a href="{{bill.fullLink}}">Full Text Link</a></p>-->
-					<div ng-bind-html="billContent"></div>
-					<!--<p class="lead">{{bill.billContent.major_actions}}</p>-->
-					<!--<p class="lead">{{bill.billContent.sponsor}}</p>-->
-					<!--<p class="lead">{{bill.billContent.titles}}</p>-->
+				<br>
+				<div class="container">
+					<div class="col-lg-4 col-sm-6">
+			          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+			            <div class="image" style="background-image: url('{{bill.user.coverUrl}}')">
+	              		  <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em;max-width:20em" src="{{bill.user.avatarUrl}}" err-src="/images/avatar.png">
+			            </div>
+			            <div class="info">
+			              <h2 class="name"><a href="member/{{bill.user.username}}">{{bill.user.username}}</a></h2>
+			              <p>{{bill.user.title}}</p>
+			              <!--<button class="btn btn-default">follow</button>-->
+			            </div>
+			            <div class="social">
+			              <a ng-show="bill.user.socialAccounts.facebook.profileUrl" href="{{bill.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+			              <a ng-show="bill.user.socialAccounts.twitter.profileUrl" href="{{bill.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+			              <a ng-show="bill.user.socialAccounts.google.profileUrl" href="{{bill.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+			            </div>
+			          </div>
+			        </div>
+					<div class="col-sm-8">
+						<br>
+						<p>{{bill.billContent.current_status_description}}</p>
+						<p>{{bill.billContent.current_status_label}}</p>
+						<div ng-show="bill.summary"><p>Bill Summary</p><p>{{bill.summary}}</p></div>
+						<div ng-bind-html="billContent"></div>
+					</div>
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Activity">
@@ -40,13 +45,12 @@
 		    </uib-tab>
 			<uib-tab heading="Discussion">
 				<div class="commentsContainer" ng-hide="comments.length==0 && !currentUser">
-					<h3>comments</h3>
-					<md-divider></md-divider>
 					<!--if logged in-->
 					<div ng-show="currentUser">
+						<br>
 						<form class="blog-input" role="form" ng-submit="createComment(newComment)">
 							<div class="form-group">
-								<input type="text" placeholder="comment..." ng-model="newComment.comment" class="form-control" id="postTitle">
+								<textarea type="text" placeholder="comment..." ng-model="newComment.comment" class="form-control" id="postTitle"></textarea>
 							</div>
 							<button type="submit" class="btn btn-primary">Submit</button>
 						</form>
@@ -67,17 +71,25 @@
 				</div>
 		    </uib-tab>
 		    <uib-tab heading="Votes">
+	    		<div ng-show="currentUser">
+					<form class="blog-input" role="form" ng-submit="">
+						<div class="form-group">
+							<input type="text" placeholder="newVote" ng-model="newComment.comment" class="form-control" id="postTitle">
+						</div>
+						<button type="submit" class="btn btn-primary">Submit</button>
+					</form>
+				</div>
 			    <div class="voteContainer" ng-show="votes.length!=0">
 					<div ng-repeat="vote in bill.votes">
 						<h4>
 			      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
 			      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-							<a href="/vote/{{vote.id}}">{{vote.title}}</a>
+							<button class="btn btn-default" ng-click="createVote(0, vote)"><i class="fa fa-question"></i> {{vote.otherCount}}</button>
+			      			({{vote.voteCount}})
+							<a href="/vote/{{vote.id}}">{{vote.title}}</a> -- {{vote.result}}
 						</h4>
-						<p>{{vote.type}}</p>
-						<p>{{vote.result}}</p>
-						<p>{{vote.voteCount}}</p>
-						<p>{{vote.plusCount}} - {{vote.minusCount}} - {{vote.otherCount}}</p>
+						<p>comment</p>
+						<!--<p>{{vote.type}}</p>-->
 						<md-divider></md-divider>
 					</div>
 				</div>
