--- a/assets/src/app/committee/home.tpl.html
+++ b/assets/src/app/committee/home.tpl.html
@@ -60,7 +60,7 @@
         </div>
       </div>
     </uib-tab>
-    <uib-tab heading="Bills">
+    <uib-tab heading="{{bills.length}} Bills">
       <div class="bill-list-container">
         <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
           <div class="bill-item">
@@ -83,7 +83,28 @@
     </uib-tab>
     <uib-tab heading="Discussion">
     </uib-tab>
-    <uib-tab heading="Members" ng-click="goToPath('members')">
+    <uib-tab heading="{{members.length}} Members">
+    <!--<uib-tab heading="Members" ng-click="goToPath('members')">-->
+      <div class="container">
+        <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
+          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+            <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
+              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" class="avatar" src="{{member.user.avatarUrl}}" err-src="/images/avatar.png">
+            </div>
+            <div class="info">
+              <h2 class="name"><a href="member/{{member.user.username}}">{{member.user.username}}</a></h2>
+              <h3 class="position" style="text-transform:capitalize"><a href="member/{{member.user.username}}">{{member.title}}</a></h3>
+              <p>{{member.user.title}}</p>
+              <!--<button class="btn btn-default">follow</button>-->
+            </div>
+            <div class="social">
+              <a ng-show="member.user.socialAccounts.facebook.profileUrl" href="{{member.user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+              <a ng-show="member.user.socialAccounts.twitter.profileUrl" href="{{member.user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+              <a ng-show="member.user.socialAccounts.google.profileUrl" href="{{member.user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+            </div>
+          </div>
+        </div>
+      </div> 
     </uib-tab>
     <uib-tab heading="Votes">
     </uib-tab>
