--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -170,6 +170,7 @@
   <div id="about">
     <div id="information">
       <div class="container">
+        <h1>be part of the movement</h1>
         <i style="font-size:256px;" class="fa fa-bullhorn"></i>
         <md-divider></md-divider>
         <h4>be part of the movement</h4>
@@ -201,21 +202,17 @@
       <div class="container">
         <h2><a href="/bills">{{billCount}} bills</a></h2>
         <md-divider></md-divider><br>
-
-        <div class="container">
-          <md-card ng-repeat="bill in bills">
-            <md-card-title>
-              <md-card-title-text>
-                <h4>
-                  <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{plusCount}}</button>
-                  <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{minusCount}}</button>
-                  <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
-                </h4>
-              </md-card-title-text>
-            </md-card-title>
-          </md-card>
-        </div>
-
+        <md-card ng-repeat="bill in bills">
+          <md-card-title>
+            <md-card-title-text>
+              <h4>
+                <button ng-class="{'upVoted': class=='upVote'}" class="btn btn-default upVote" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i>  {{plusCount}}</button>
+                <button ng-class="{'downVoted': class=='downVote'}" class="btn btn-default downVote" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i>  {{minusCount}}</button>
+                <a href="/bill/{{bill.id}}/{{bill.title.replace(' ','-')}}">{{bill.title}}</a>
+              </h4>
+            </md-card-title-text>
+          </md-card-title>
+        </md-card> 
         <div ng-click="loadMoreBills()" style="text-align:center">
           <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
         </div>
@@ -226,25 +223,16 @@
       <div class="container">
         <h2><a href="/committees">{{committeeCount}} committees</a></h2>
         <md-divider></md-divider><br>
-
-        <div class="container">
-          <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-            <md-card flex="20" ng-repeat="committee in committees">
-              <md-card-title>
-                <md-card-title-text>
-                  <a href="/committee/{{committee.urlTitle}}">
-                    <span class="">{{committee.title}}</span>
-                  </a>
-                </md-card-title-text>
-              </md-card-title>
-            </md-card>
-          </div>
-        </div>
-
+        <md-card ng-repeat="committee in committees" class="col-sm-12">
+          <md-card-title>
+            <md-card-title-text>
+              <h4><a href="/committee/{{committee.urlTitle}}"><span class="">{{committee.title}}</span></a></h4>
+            </md-card-title-text>
+          </md-card-title>
+        </md-card>
         <div ng-click="loadMoreCommittees()" style="text-align:center">
           <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
         </div>
-
       </div>
     </div>
 
@@ -280,28 +268,8 @@
         </md-input-container>
         -->
 
-        <!--member card css?-->
-        <!--
-        <div class='md-padding' layout="row" layout-align="center" layout-wrap>
-          <md-card class="col-lg-3 col-sm-6" ng-repeat="user in users">
-            <a href="/member/{{user.username}}">
-              <img ng-src="{{user.avatarUrl}}" err-src="/images/avatar.png" class="md-card-image" alt="{{user.username}}">
-            </a>
-            <md-card-title>
-              <md-card-title-text>
-                <a href="/member/{{user.username}}">
-                  <span class="">{{user.username}}</span><br>
-                </a>
-                <span class="">{{user.title}}</span>
-                <span class="">{{user.state}}</span>
-              </md-card-title-text>
-            </md-card-title>
-          </md-card>
-        </div>
-        -->
-
         <div class="col-lg-4 col-sm-6" ng-repeat="user in users">
-          <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
+          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
             <div class="image" style="background-image: url('{{user.coverUrl}}')">
               <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
             </div>
@@ -317,12 +285,10 @@
             </div>
           </div>
         </div>
-
         <div ng-click="loadMoreMembers()" style="text-align:center">
           <button class="btn btn-default col-xs-10 col-xs-offset-1">more <i class="fa fa-caret-down"></i></button>
         </div>
       </div>
-
     </div>
   </div>
 </div>
