--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -164,32 +164,42 @@
   <div class="imageContainer">
     <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
     <div class="imageContainerDiv container">  
-      <h1>build empowerment, change consensus</h1>
+      <h1 style="text-align:center">build empowerment, change consensus</h1>
     </div>
   </div>
   <div id="about">
     <div id="information">
       <div class="container">
-        <h1>be part of the movement</h1>
-        <i style="font-size:256px;" class="fa fa-bullhorn"></i>
-        <md-divider></md-divider>
-        <h4>be part of the movement</h4>
-        <h4>direct your impact though input on policy</h4>
-        <p>directly impact the creation of policy</p>
-        <!--<p>contact your reps and tell them your opinion about legislation</p>-->
-        <p>creating a coalition of representation</p>
-
-        <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
-        <!--<p>with direct input on policy your voice matters</p>-->
-        <!--generate a network of reprensentatives for the people-->
-        <!--rep others to their reps-->
-        <!--<p>with continual open ballot elections - represent others at anytime</p>-->
-        <!--organizing a coalition of reps for reps-->
-
-        <md-divider></md-divider>
-        <br><br>
-        <a href="/about" class="btn btn-default">learn more</a>
-        <div class="spacing-200"></div>
+        <div class="col-md-12">
+          <div class="spacing-100"></div>
+        </div>
+        <div class="col-md-6">
+          <i style="font-size:256px;" class="fa fa-bullhorn"></i>
+        </div>
+        <div class="col-md-6">
+          <h1>be part of the movement</h1>
+          <h4>direct your impact though input on policy</h4>
+          <p>directly impact the creation of policy</p>
+          <p>creating a coalition of representation</p>
+          <a href="/about" class="btn btn-default">learn more</a>
+        </div>
+        <!--<div class="col-md-12">
+          <md-divider></md-divider>
+          <h4>direct your impact though input on policy</h4>
+          <p>directly impact the creation of policy</p>-->
+          <!--<p>contact your reps and tell them your opinion about legislation</p>-->
+          <!--<p>creating a coalition of representation</p>
+          <a href="/about" class="btn btn-default">learn more</a>-->
+          <!--<p>directly impact the political landscape, with input on policy your voice counts</p>-->
+          <!--<p>with direct input on policy your voice matters</p>-->
+          <!--generate a network of reprensentatives for the people-->
+          <!--rep others to their reps-->
+          <!--<p>with continual open ballot elections - represent others at anytime</p>-->
+          <!--organizing a coalition of reps for reps-->
+        <!--</div>-->
+        <div class="col-md-12">
+          <div class="spacing-100"></div>
+        </div>
       </div>
     </div>
 
