--- a/assets/src/app/committee/home.tpl.html
+++ b/assets/src/app/committee/home.tpl.html
@@ -9,38 +9,40 @@
     <li><a href="committee/{{committee.urlTitle}}/votes">votes</a></li>
   </ul>
 </div>-->
+<!--
 <div style="overflow:hidden;max-height:300px;">
   <img style="width:100%;min-height:10em;" src="images/congress1.jpg">
 </div>
-<div class="container">
-  <div class="committee-title">
-    <h1>{{committee.title}}</h1>
+-->
+<div class="imageContainerSmall">
+  <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+  <div class="imageContainerSmallDiv container">  
+    <h1 style="text-align:left">{{committee.title}}</h1>
   </div>
-  <md-divider ></md-divider>
-  <div ng-show="currentUser">
-    <br>
-    <button ng-click="toggleEditCommittee()" class="btn btn-primary">edit committee</button>
-    <br>
-    <div style="margin-left:20%;margin-right:20%;" ng-show="editCommitteeToggle">
-      edit committee form
-    </div>
-    <br>
-    <button ng-click="toggleCreateBill()" class="btn btn-primary">+ bill</button>
-    <br>
-    <div style="margin-left:20%;margin-right:20%;" ng-show="createBillToggle">
-      <form class="committee-input" role="form" ng-submit="createBill(newBill)">
-        <div class="form-group">
-          <input type="text" placeholder= "bill title" ng-model="newBill.title" class="form-control">
-          <input type="text" placeholder= "bill content" ng-model="newBill.billContent" class="form-control">
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-    </div>
+</div>
+<div ng-show="currentUser" class="container">
+  <br>
+  <button ng-click="toggleEditCommittee()" class="btn btn-primary">edit committee</button>
+  <br>
+  <div style="margin-left:20%;margin-right:20%;" ng-show="editCommitteeToggle">edit committee for</div>
+  <br>
+  <button ng-click="toggleCreateBill()" class="btn btn-primary">+ bill</button>
+  <br>
+  <div style="margin-left:20%;margin-right:20%;" ng-show="createBillToggle">
+    <form class="committee-input" role="form" ng-submit="createBill(newBill)">
+      <div class="form-group">
+        <input type="text" placeholder= "bill title" ng-model="newBill.title" class="form-control">
+        <input type="text" placeholder= "bill content" ng-model="newBill.billContent" class="form-control">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
   <br>
+</div>
+<div class="container">
   <uib-tabset>
     <uib-tab heading="Activity" active="active">
-      <div class="bill-list-container">
+      <div class="container bill-list-container" style="min-height:100vh">
         <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
           <div class="bill-item">
             <div>
@@ -61,7 +63,7 @@
       </div>
     </uib-tab>
     <uib-tab heading="{{bills.length}} Bills">
-      <div class="bill-list-container">
+      <div class="container bill-list-container" style="min-height:100vh">
         <div class="bill-container" ng-repeat="bill in bills | orderBy:'-voteCount'">
           <div class="bill-item">
             <div>
@@ -82,10 +84,12 @@
       </div>
     </uib-tab>
     <uib-tab heading="Discussion">
+      <div class="container" style="min-height:100vh">
+      </div>
     </uib-tab>
     <uib-tab heading="{{members.length}} Members">
     <!--<uib-tab heading="Members" ng-click="goToPath('members')">-->
-      <div class="container">
+      <div class="container" style="min-height:100vh">
         <div class="col-lg-4 col-sm-6" ng-repeat="member in members">
           <div style="margin:10px; box-shadow: 2px 2px 10px #999;">
             <div class="image" style="background-image: url('{{member.user.coverUrl}}')">
@@ -107,6 +111,8 @@
       </div> 
     </uib-tab>
     <uib-tab heading="Votes">
+      <div class="container" style="min-height:100vh">
+      </div>
     </uib-tab>
   </uib-tabset>
 </div>
