--- a/assets/src/app/home/index.tpl.html
+++ b/assets/src/app/home/index.tpl.html
@@ -253,6 +253,7 @@
         <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br>
         <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
 
+        <!--
         <div class='md-padding' layout="row" layout-align="center" layout-wrap>
           <md-card flex="20" ng-repeat="user in officialRepresentatives">
             <a href="/member/{{user.username}}">
@@ -266,6 +267,25 @@
               </md-card-title-text>
             </md-card-title>
           </md-card>
+        </div>
+        -->
+
+        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
+          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+            <div class="image" style="background-image: url('{{user.coverUrl}}')">
+              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+            </div>
+            <div class="info">
+              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
+              <p>{{user.state}}</p>
+            </div>
+            <div class="social">
+              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+            </div>
+          </div>
         </div>
 
         <!--
