--- a/assets/src/app/search/index.tpl.html
+++ b/assets/src/app/search/index.tpl.html
@@ -1,17 +1,19 @@
 <div ui-view="search">
-	<div class="container">
-		<div ng-show="!searchQuery">
-			<h1>discover members / legislators</h1>
-	        <md-divider></md-divider><br>
-
+	<div ng-show="!searchQuery">
+		<div class="imageContainerSmall">
+			<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+			<div class="imageContainerSmallDiv container">  
+				<h1 style="text-align:left">discover</h1>
+			</div>
+		</div>
+		<br>
+		<div class="container">
 	        <button ng-show="!gettingRepresentatives" ng-click="getLatLng()" class="btn btn-default">find representatives</button><br><br>
-
 	        <md-card>
 				<md-card-title>
 					<input style="width:100%" ng-keyup="keyPress(searchValue)" ng-model="searchValue">
 				</md-card-title>
 			</md-card>
-
 			<div class='md-padding'>
 	            <md-card ng-repeat="searchResult in searchResults">
 	              <md-card-title>
@@ -23,19 +25,22 @@
 	        </div>
 
 	        <i ng-show="gettingRepresentatives" style="font-size:48px" class="fa fa-spinner fa-pulse fa-3x fa-fw"></i>
-	        <div class='md-padding' layout="row" layout-align="left" layout-wrap>
-	          <md-card flex="20" ng-repeat="user in officialRepresentatives">
-	            <a href="/member/{{user.username}}">
-	              <img ng-src="{{user.avatarUrl}}" class="md-card-image" alt="{{user.username}}">
-	            </a>
-	            <md-card-title>
-	              <md-card-title-text>
-	                <a href="/member/{{user.username}}">
-	                  <span class="">{{user.username}}</span>
-	                </a>
-	              </md-card-title-text>
-	            </md-card-title>
-	          </md-card>
+	        <div class="col-lg-4 col-sm-6" ng-repeat="user in officialRepresentatives">
+	          <div style="margin:10px; box-shadow: 2px 2px 10px #999;overflow:hidden">
+	            <div class="image" style="background-image: url('{{user.coverUrl}}')">
+	              <img alt="" style="position:absolute;left:0;right0;margin:0 auto;margin-top:4em" src="{{user.avatarUrl}}" err-src="/images/avatar.png">
+	            </div>
+	            <div class="info">
+	              <h2 class="name"><a href="member/{{user.username}}">{{user.username}}</a></h2>
+	              <h3 class="position"><a href="member/{{user.username}}">{{user.title}}</a></h3>
+	              <p>{{user.state}}</p>
+	            </div>
+	            <div class="social">
+	              <a ng-show="user.socialAccounts.facebook.profileUrl" href="{{user.socialAccounts.facebook.profileUrl}}"  target="_blank"><i class="fa fa-facebook"></i></a>
+	              <a ng-show="user.socialAccounts.twitter.profileUrl" href="{{user.socialAccounts.twitter.profileUrl}}"  target="_blank"><i class="fa fa-twitter"></i></a>
+	              <a ng-show="user.socialAccounts.google.profileUrl" href="{{user.socialAccounts.google.profileUrl}}"  target="_blank"><i class="fa fa-google"></i></a>
+	            </div>
+	          </div>
 	        </div>
 
 			<!--search with member filter-->
@@ -65,12 +70,15 @@
 		    </div>
 		    <div style="height:100px;"></div>
 		</div>
-		<div ng-show="searchQuery">
-			<div>
-				<h1>{{searchQuery}}</h1>
-				<md-divider></md-divider>
+	</div>
+	<div ng-show="searchQuery">
+		<div class="imageContainerSmall">
+			<video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+			<div class="imageContainerSmallDiv container">  
+				<h1 style="text-align:left">{{searchQuery}}</h1>
 			</div>
-
+		</div>
+		<div class="container">
 			<md-card ng-repeat="searchResult in searchResults">
 				<!--<img ng-show="searchResult.username" src="{{searchResult.avatarUrl}}" class="md-card-image" alt="{{searchResult.username}}" style="">-->
 				<md-card-title>
@@ -81,7 +89,6 @@
 					</md-card-title-text>
 				</md-card-title>
 			</md-card>
-			<br>
 		</div>
 	</div>
 </div>
