--- a/assets/styles/css/about.css
+++ b/assets/styles/css/about.css
@@ -18,6 +18,28 @@
   margin-top:auto;
   margin-bottom:auto;
 }
+
+.imageContainerSmall {
+  background:rgba(0,0,0,0.8);
+  overflow:hidden;
+  min-height: 200px;
+  font-family: 'Jura', sans-serif;
+  margin:0;padding:0;border:0 none;position: relative;
+}
+.imageContainerSmallDiv {
+  width:100%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+}
+.imageContainerSmallDiv h1 {
+  color: rgba(255,255,255,0.9);
+  font-size: 50px;
+  font-weight: 400;
+  margin-top:auto;
+  margin-bottom:auto;
+}
+
 .flexible {
   max-height:500px;
   position:absolute;
