--- a/assets/src/app/committees/index.tpl.html
+++ b/assets/src/app/committees/index.tpl.html
@@ -1,21 +1,10 @@
 <!--if logged in-->
-<div class="container">
-  <md-subheader class="md-no-sticky">committees</md-subheader>
-</div>
-<md-divider ></md-divider>
-<!--<md-subheader class="md-no-sticky">filter</md-subheader>
-<md-divider ></md-divider>-->
-<!--<div>
-  <style type="text/css">
-      .angular-google-map-container { height: 250px; box-shadow: 0 0 10px rgba(0,0,0,0.5); }
-  </style>
-  <div itemscope itemtype="Map" class="map-outter bottom-contact">
-      <div class="gmap-container" id="gmap">
-          <ui-gmap-google-map center="map.center" zoom="map.zoom" options="options">
-          </ui-gmap-google-map>
-      </div>
+<div class="imageContainerSmall">
+  <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+  <div class="imageContainerSmallDiv container">  
+    <h1 style="text-align:left">committees</h1>
   </div>
-</div>-->
+</div>
 <div class="container">
   <div ng-show="currentUser">
     <div style="margin-left:2%;margin-right:2%;">
