--- a/assets/src/app/votes/index.tpl.html
+++ b/assets/src/app/votes/index.tpl.html
@@ -1,27 +1,26 @@
-<md-content>
-	<div class="container">
-		<h2 class="md-no-sticky">votes</h2>
-	</div>
-	<md-divider></md-divider>
-	<md-list class="container">
-		<md-list-item ng-repeat="vote in votes">
-			<div class="md-list-item-text" layout="column">
-				<h3 class="" style="font-size:25px">
-					{{vote.plusCount - vote.minusCount}} ({{vote.voteCount}})
-          			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
-          			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
-					<a href="/vote/{{vote.id}}">{{vote.title}}</a>
-				</h3>
-				<h5><a href="/bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
-			</div>
-		</md-list-item>
-	</md-list>
-	<md-divider ></md-divider>
-	<br><br>
-	<div ng-click="loadMore()" style="text-align:center">
-	  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
-	</div>
-</md-content>
-
-<div style="height:100px;"></div>
+<div class="imageContainerSmall">
+  <video class='flexible' autoplay="autoplay" muted="muted" preload="auto" loop="loop"><source src="https://s3-us-west-2.amazonaws.com/voetr/washington.mp4" type="video/mp4"></video>
+  <div class="imageContainerSmallDiv container">  
+    <h1 style="text-align:left">votes</h1>
+  </div>
+</div>
+<md-list class="container">
+	<md-list-item ng-repeat="vote in votes">
+		<div class="md-list-item-text" layout="column">
+			<h3 class="" style="font-size:25px">
+				{{vote.plusCount - vote.minusCount}} ({{vote.voteCount}})
+      			<button class="btn btn-default" ng-click="createVote(1, vote)"><i class="fa fa-caret-up"></i> {{vote.plusCount}}</button>
+      			<button class="btn btn-default" ng-click="createVote(-1, vote)"><i class="fa fa-caret-down"></i> {{vote.minusCount}}</button>
+				<a href="/vote/{{vote.id}}">{{vote.title}}</a>
+			</h3>
+			<h5><a href="/bill/{{vote.bill.id}}/{{vote.bill.urlTitle}}">{{vote.bill.title}}</a></h5>
+		</div>
+	</md-list-item>
+</md-list>
+<md-divider></md-divider>
+<br><br>
+<div ng-click="loadMore()" style="text-align:center">
+  <button class="btn btn-default col-xs-10 col-xs-offset-1">MORE <i class="fa fa-caret-down"></i></button>
+</div>
+<div style="height:50px;"></div>
 <div ng-include="'footer/index.tpl.html'"></div>
